# read-aware

./: .gitignore  CLAUDE.md  LICENSE  README.ja.md  README.md  README.zh-CN.md  index.html  package.json  turbo.json  vite.config.ts  wrangler.jsonc
.claude/skills/publishing/: SKILL.md
.github/workflows/: release.yml
.storybook/: preview.ts
.superset/: config.json
apps/agent-lab/: index.html  package.json  tsconfig.json  vite.config.ts
apps/agent-lab/public/: foliate-js
apps/agent-lab/public/books/: README.md
apps/agent-lab/src/: AgentLabPage.tsx  env.d.ts  index.css  main.tsx  useAgentLab.ts
apps/agent-lab/src/components/: LabComposer.tsx  LabReader.tsx  LabTranscript.tsx
apps/agent-lab/src/lib/: extract-text.ts  foliate.ts
apps/desktop/: README.md  package.json
apps/desktop/scripts/: generate-icons.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
apps/desktop/src-tauri/bundled-plugins/dictionary/: main.js  manifest.json
apps/desktop/src-tauri/bundled-plugins/vocabulary/: main.js  manifest.json
apps/desktop/src-tauri/capabilities/: default.json  desktop.json
apps/desktop/src-tauri/dmg/: READ ME.txt  background.html  finalize-dmg.sh  generate-background.sh
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: android_update.rs  book_metadata.rs  lib.rs  main.rs  pdf_metadata.rs  plugins.rs  storage.rs
apps/desktop/src-tauri/src/storage/: mod.rs  tests.rs
apps/landing/: index.html  package.json  vite.config.ts
apps/landing/scripts/: prerender.mjs
apps/landing/src/: entry-server.tsx  index.css  main.tsx  routeTree.gen.ts  router.tsx  vite-env.d.ts
apps/landing/src/components/: BlogLayout.tsx  BlogPost.tsx  DocsLayout.tsx  DocsNav.tsx  DownloadMenu.tsx  DownloadSection.tsx  LanguageMenu.tsx  LinkButton.tsx  SiteFooter.tsx  SiteHeader.tsx  WaitlistForm.tsx
apps/landing/src/hooks/: useDocumentLang.ts  useLatestRelease.ts
apps/landing/src/lib/: docs-nav.ts  i18n.ts  loops.ts  posts.ts  releases.ts  site.ts
apps/landing/src/routes/: __root.tsx  blog.tsx  docs.tsx  index.tsx
apps/web/: i18next-parser.config.js  index.html  package.json  vite.config.ts
apps/web/.storybook/: main.ts  preview.ts
apps/web/public/foliate-js/: VENDOR.md  fixed-layout.js  loader.js  paginator.js  pdf.js
apps/web/scripts/: gen-curated-fonts.mjs
apps/web/src/: App.tsx  app-mount.tsx  app-warmup.ts  boot-splash.ts  index.css  main.tsx  routeTree.gen.ts
apps/web/src/components/: Accordion.tsx  Button.stories.tsx  Dialog.stories.tsx  Divider.tsx  DropdownMenu.stories.tsx  DropdownMenu.tsx  Kbd.tsx  NavItem.tsx  Popover.stories.tsx  Popover.tsx  ScrollArea.tsx  Select.stories.tsx  Skeleton.tsx  Tabs.tsx  Toggle.stories.tsx
apps/web/src/domain/: annotations.ts  books.ts  collections.ts  conversations.ts  events.ts  index.ts  reading.ts  vocabulary.ts
apps/web/src/hooks/: useBackInterceptor.ts  useSurfaceHandoff.ts
apps/web/src/i18n/: config.ts  detect.ts  format.ts  i18next.d.ts  index.ts  instance.ts
apps/web/src/platform/: app-events.ts  back-navigation.ts  blob-store.ts  desktop-import.ts  domain-events.ts  environment.ts  event-genesis.ts  export-file.ts  interim-projections.ts  local-store.ts  safe-area.ts  status-bar.ts  storage.ts  tauri-storage.ts  traffic-lights.ts  volume-keys.ts  wheel-phase.ts
apps/web/src/routes/: __root.tsx  agent-lab.tsx  index.tsx  settings.about.tsx  (+7 more)
docs/: agent-architecture.md  data-model.md  i18n.md  plugin-system-review.html  plugin-system.html  plugin-system.md  sqlite-schema.sql
examples/plugins/annotation-tools/: main.js  manifest.json
examples/plugins/md-quote/: main.js  manifest.json
examples/plugins/shelf-report/: main.js  manifest.json
plugins/dictionary/: package.json  tsconfig.json
plugins/dictionary/scripts/: build.ts
plugins/dictionary/src/: agent-tools.ts  export.ts  format.ts  index.ts  languages.ts  types.ts  views.ts  words.ts
plugins/dictionary/tests/: format.test.ts  registration.test.ts
plugins/rss-reader/: manifest.json  package.json  tsconfig.json
plugins/rss-reader/src/: agent-tools.ts  feed.ts  index.ts  opml.ts  storage.ts  types.ts  views.ts
plugins/rss-reader/tests/: rss.test.ts
plugins/sentence-reader/: manifest.json  package.json
plugins/sentence-reader/src/: copy.ts  index.ts  segment.ts
plugins/sentence-reader/tests/: copy.test.ts  segment.test.ts
scripts/: build-plugin.ts
src/: App.tsx  index.css  main.tsx
src-backend/: README.md  pyproject.toml
src-backend/src/read_aware_backend/: main.py
src-backend/src/read_aware_backend/api/: router.py
src-backend/src/read_aware_backend/api/routes/: health.py
src-backend/src/read_aware_backend/core/: config.py
src-backend/tests/: test_health.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Accordion.tsx  Alert.stories.tsx  AllComponents.stories.tsx  Avatar.stories.tsx  Avatar.tsx  Badge.stories.tsx  Breadcrumb.stories.tsx  Breadcrumb.tsx  Button.stories.tsx  Button.tsx  Card.stories.tsx  Card.tsx  Checkbox.stories.tsx  Checkbox.tsx  DefinitionList.tsx  Dialog.stories.tsx  Dialog.tsx  Divider.stories.tsx  DropdownMenu.stories.tsx  DropdownMenu.tsx  EmptyState.stories.tsx  EmptyState.tsx  IconButton.stories.tsx  Kbd.stories.tsx  NavItem.tsx  Popover.tsx  Progress.stories.tsx  Progress.tsx  Radio.stories.tsx  Radio.tsx  ScrollArea.tsx  Select.stories.tsx  Select.tsx  Sidebar.stories.tsx  Sidebar.tsx  Skeleton.tsx  Spinner.tsx  Stack.stories.tsx  Tabs.stories.tsx  Tabs.tsx  (+11 more)
src/components/docs/: Colors.mdx  Overview.mdx  Spacing.mdx  Typography.mdx
src/components/typography/: Body.stories.tsx  Body.tsx  Caption.stories.tsx  Caption.tsx  Display.tsx  Eyebrow.stories.tsx  Eyebrow.tsx  Heading.tsx
src/features/reader/: index.ts
src/features/settings/: SettingsView.stories.tsx  SettingsView.tsx
src/routes/: __root.tsx  index.tsx
src/state/: ui.ts
src/stories/: InterfaceAppShell.stories.tsx  InterfaceContextPanel.stories.tsx  InterfaceReader.stories.tsx  InterfaceSettings.stories.tsx  InterfaceShelf.stories.tsx
(+443 files in other folders)
