[project]
name = "read-aware-backend"
version = "0.1.0"
description = "FastAPI backend for the ReadAware web app"
readme = "README.md"
authors = [
    { name = "破晓", email = "AHpx@yandex.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic-settings>=2.13.1",
    "uvicorn[standard]>=0.41.0",
]

[project.scripts]
read-aware-backend = "read_aware_backend.main:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
