[package]
name = "read-aware-desktop"
version = "0.1.0"
description = "ReadAware desktop shell"
edition = "2021"
rust-version = "1.77.2"

[lib]
# The `_lib` suffix avoids a name collision with the binary on Windows.
name = "read_aware_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Bundled SQLite — no system dependency; compiles SQLite from source.
rusqlite = { version = "0.32", features = ["bundled"] }
# Dev-only bridge that lets the Tauri MCP server drive/inspect the webview.
# Linked in all builds (so its capability permission resolves) but only
# initialized under debug_assertions — see lib.rs.
tauri-plugin-mcp-bridge = "0.11"
# macOS: reposition the native traffic lights to align with our custom top bar
# (we only use set_traffic_lights_inset; not its overlay titlebar).
tauri-plugin-decorum = "1"
# Native OS file dialog for book import — the webview ignores HTML <input accept>.
tauri-plugin-dialog = "2"
