[package]
name = "read-aware-desktop"
version = "0.1.0"
description = "ReadAware desktop shell"
edition = "2021"
rust-version = "1.77.2"

[lib]
# The `_lib` suffix avoids a name collision with the binary on Windows.
name = "read_aware_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Bundled SQLite — no system dependency; compiles SQLite from source.
rusqlite = { version = "0.32", features = ["bundled"] }
# Content hashes for the blob registry (dedupe, integrity, sync reconciliation).
sha2 = "0.10"
# Stable per-install device id (HLC tiebreaker + sync attribution).
uuid = { version = "1", features = ["v4"] }
# Native OS file dialog for book import — the webview ignores HTML <input accept>.
tauri-plugin-dialog = "2"
# Filesystem access that understands mobile paths (Android content:// URIs);
# read_book_file routes through it so book import works on every platform.
tauri-plugin-fs = "2"

# Desktop only: window-chrome helpers and the dev-time MCP bridge. Neither
# compiles for (or makes sense on) Android/iOS, where the webview is fullscreen.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# Dev-only bridge that lets the Tauri MCP server drive/inspect the webview.
# Linked in all desktop builds (so its capability permission resolves) but only
# initialized under debug_assertions — see lib.rs.
tauri-plugin-mcp-bridge = "0.11"
# macOS: reposition the native traffic lights to align with our custom top bar
# (we only use set_traffic_lights_inset; not its overlay titlebar).
tauri-plugin-decorum = "1"

# macOS only: toggle the native traffic-light buttons for the reader's immersive
# view. Versions match what decorum/tauri already lock, so no new resolution.
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[dev-dependencies]
# Scratch dirs for the filesystem blob-store tests.
tempfile = "3"

# Android only: reach MainActivity over JNI to toggle the system status bar
# for the reader's immersive view. `tao` (already in tauri's tree, same
# version) exposes the activity's JavaVM/jobject via main_android_context —
# the ndk-context crate's global is NOT initialized under tauri and panics.
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
tao = "0.35"
