[package]
name = "read-aware-desktop"
version = "0.1.0"
description = "ReadAware desktop shell"
edition = "2021"
rust-version = "1.77.2"

[lib]
# The `_lib` suffix avoids a name collision with the binary on Windows.
name = "read_aware_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
# Bundled SQLite — no system dependency; compiles SQLite from source.
# `functions` lets us register ra_fts_segment (CJK bigram segmentation) as a
# SQL function so the FTS triggers can call it.
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
# Content hashes for the blob registry (dedupe, integrity, sync reconciliation).
sha2 = "0.10"
# EPUB metadata is a few small ZIP entries (container.xml, OPF, cover). Reading
# those directly avoids opening the whole book in the webview just to paint a
# shelf cover.
zip = { version = "2.2", default-features = false, features = ["deflate"] }
quick-xml = "0.39"
percent-encoding = "2"
# Stable per-install device id (HLC tiebreaker + sync attribution).
uuid = { version = "1", features = ["v4"] }
# Native OS file dialog for book import — the webview ignores HTML <input accept>.
tauri-plugin-dialog = "2"
# Filesystem access that understands mobile paths (Android content:// URIs);
# read_book_file routes through it so book import works on every platform.
tauri-plugin-fs = "2"

# Desktop only: window-chrome helpers and the dev-time MCP bridge. Neither
# compiles for (or makes sense on) Android/iOS, where the webview is fullscreen.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# Signed desktop release checks and installation. The updater is unsupported on
# mobile, where store-managed updates remain the platform-native path.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Dev-only bridge that lets the Tauri MCP server drive/inspect the webview.
# Linked in all desktop builds (so its capability permission resolves) but only
# initialized under debug_assertions — see lib.rs.
tauri-plugin-mcp-bridge = "0.11"
# macOS: reposition the native traffic lights to align with our custom top bar
# (we only use set_traffic_lights_inset; not its overlay titlebar).
tauri-plugin-decorum = "1"

# macOS only: toggle the native traffic-light buttons for the reader's immersive
# view. Versions match what decorum/tauri already lock, so no new resolution.
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

# Windows only: DirectWrite enumeration of installed font families for the
# reader's font picker. Same `windows` version wry/tao already lock — the
# feature flags are additive, no second copy in the graph.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Graphics_DirectWrite",
  "Win32_Globalization",
] }

[dev-dependencies]
# Scratch dirs for the filesystem blob-store tests.
tempfile = "3"

# Hashing large imported books is user-facing even in `tauri dev`. Optimizing
# only sha2 keeps normal debug compilation fast while avoiding a 10x+ debug-mode
# penalty that made an 88 MB import take seconds instead of milliseconds.
[profile.dev.package.sha2]
opt-level = 3

# Android only: reach MainActivity over JNI to toggle the system status bar
# for the reader's immersive view. `tao` (already in tauri's tree, same
# version) exposes the activity's JavaVM/jobject via main_android_context —
# the ndk-context crate's global is NOT initialized under tauri and panics.
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
semver = "1"
tao = "0.35"
